--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -25,100 +25,111 @@
             }
         </style>
 
-        <p:tabView id="kitchenTabView" effect="fade">
-            <p:tab title="ORDERED">
-                <h:form>
-                    <p:growl redisplay="false" life="2500" />
-                    <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.filteredOrdersWithOrderedItems}" var="order" columns="3" rows="9" paginator="true" 
-                                paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                rowsPerPageTemplate="9,12,15">
-                        <p:panel style="text-align: center; margin: 2px 2px 2px 2px;">
+        <p:layout>
+            <p:layoutUnit minSize="300" position="west"  header="Kitchen Overview" collapsible="true">
+                <div style="margin:5;display: flex;">
+                    <p:orderList rendered="#{not empty kitchenManagementManagedBean.ongoingCustomerOrders}" value="#{kitchenManagementManagedBean.ongoingCustomerOrders}" 
+                                 var="ongoingCustomerOrder" controlsLocation="none" 
+                                 itemLabel="#{ongoingCustomerOrder.orderId}"/>
+                </div>
+            </p:layoutUnit>
 
-                            <f:facet name="header">
-                                <h:outputLabel value="Order ID - #{order.orderId}" />
-                                <br />
-                                <h:outputLabel value="#{order.orderDate}">
-                                    <f:convertDateTime pattern="dd-MMMM-yyyy hh:mm:ss a" />
-                                </h:outputLabel>
-                            </f:facet>
+            <p:layoutUnit position="center" >
+                <p:tabView id="kitchenTabView" effect="fade">
+                    <p:tab title="ORDERED">
+                        <h:form>
+                            <p:growl redisplay="false" life="2500" />
+                            <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.filteredOrdersWithOrderedItems}" var="order" columns="3" rows="9" paginator="true" 
+                                        paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                        rowsPerPageTemplate="9,12,15">
+                                <p:panel style="text-align: center; margin: 2px 2px 2px 2px;">
 
-                            <p:dataTable value="#{order.orderLineItems}" var="item" >
-                                <p:column headerText="Item Name">
-                                    <h:outputText value="#{item.menuItem.menuItemName}" />
-                                </p:column>
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Order ID - #{order.orderId}" />
+                                        <br />
+                                        <h:outputLabel value="#{order.orderDate}">
+                                            <f:convertDateTime pattern="dd-MMMM-yyyy hh:mm:ss a" />
+                                        </h:outputLabel>
+                                    </f:facet>
 
-                                <p:column headerText="Quantity">
-                                    <div class="txtAlignCenter">
-                                        <h:outputText value="#{item.quantity}" />
-                                    </div>
-                                </p:column>
+                                    <p:dataTable value="#{order.orderLineItems}" var="item" >
+                                        <p:column headerText="Item Name">
+                                            <h:outputText value="#{item.menuItem.menuItemName}" />
+                                        </p:column>
 
-                                <p:column headerText="Remarks">
-                                    <h:outputText value="#{item.remarks}" />
-                                </p:column>
+                                        <p:column headerText="Quantity">
+                                            <div class="txtAlignCenter">
+                                                <h:outputText value="#{item.quantity}" />
+                                            </div>
+                                        </p:column>
 
-                                <p:column headerText="Action">
-                                    <div class="txtAlignCenter">
-                                        <p:commandButton update="@form kitchenTabView" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}" >
-                                            <f:attribute name="orderItemToPrepare" value="#{item}" />
-                                            <!--<f:setPropertyActionListener value="{item}" target="{kitchenManagementManagedBean.orderItemToPrepare}" />-->
-                                        </p:commandButton>
-                                    </div>
-                                </p:column>
-                            </p:dataTable>             
+                                        <p:column headerText="Remarks">
+                                            <h:outputText value="#{item.remarks}" />
+                                        </p:column>
 
-                        </p:panel>
-                    </p:dataGrid>
-                </h:form>
-            </p:tab>
-            
-            <p:tab id="preparingTab" title="PREPARING">
-                <h:form>
-                    <p:growl redisplay="false" life="2500" />
-                    <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.filteredOrdersWithPreparingItems}" var="order" columns="3" rows="9" paginator="true" 
-                                paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                rowsPerPageTemplate="9,12,15">
-                        <p:panel style="text-align: center; margin: 2px 2px 2px 2px;">
+                                        <p:column headerText="Action">
+                                            <div class="txtAlignCenter">
+                                                <p:commandButton update="@form kitchenTabView" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}" >
+                                                    <f:attribute name="orderItemToPrepare" value="#{item}" />
+                                                    <!--<f:setPropertyActionListener value="{item}" target="{kitchenManagementManagedBean.orderItemToPrepare}" />-->
+                                                </p:commandButton>
+                                            </div>
+                                        </p:column>
+                                    </p:dataTable>             
 
-                            <f:facet name="header">
-                                <h:outputLabel value="Order ID - #{order.orderId}" />
-                                <br />
-                                <h:outputLabel value="#{order.orderDate}">
-                                    <f:convertDateTime pattern="dd-MMMM-yyyy hh:mm:ss a" />
-                                </h:outputLabel>
-                            </f:facet>
+                                </p:panel>
+                            </p:dataGrid>
+                        </h:form>
+                    </p:tab>
 
-                            <p:dataTable value="#{order.orderLineItems}" var="item" >
-                                <p:column headerText="Item Name">
-                                    <h:outputText value="#{item.menuItem.menuItemName}" />
-                                </p:column>
+                    <p:tab id="preparingTab" title="PREPARING">
+                        <h:form>
+                            <p:growl redisplay="false" life="2500" />
+                            <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.filteredOrdersWithPreparingItems}" var="order" columns="3" rows="9" paginator="true" 
+                                        paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                        rowsPerPageTemplate="9,12,15">
+                                <p:panel style="text-align: center; margin: 2px 2px 2px 2px;">
 
-                                <p:column headerText="Quantity">
-                                    <div class="txtAlignCenter">
-                                        <h:outputText value="#{item.quantity}" />
-                                    </div>
-                                </p:column>
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Order ID - #{order.orderId}" />
+                                        <br />
+                                        <h:outputLabel value="#{order.orderDate}">
+                                            <f:convertDateTime pattern="dd-MMMM-yyyy hh:mm:ss a" />
+                                        </h:outputLabel>
+                                    </f:facet>
 
-                                <p:column headerText="Remarks">
-                                    <h:outputText value="#{item.remarks}" />
-                                </p:column>
+                                    <p:dataTable value="#{order.orderLineItems}" var="item" >
+                                        <p:column headerText="Item Name">
+                                            <h:outputText value="#{item.menuItem.menuItemName}" />
+                                        </p:column>
 
-                                <p:column headerText="Action">
-                                    <div class="txtAlignCenter">
-                                        <p:commandButton update="@form" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
-                                            <f:attribute name="orderItemToServe" value="#{item}" />
-                                            <!--<f:setPropertyActionListener value="{item}" target="{kitchenManagementManagedBean.orderItemToServe}" />-->
-                                        </p:commandButton>
-                                    </div>
-                                </p:column>
-                            </p:dataTable>
-                            
-                        </p:panel>
-                    </p:dataGrid>
-                </h:form>
-            </p:tab>
-        </p:tabView>
+                                        <p:column headerText="Quantity">
+                                            <div class="txtAlignCenter">
+                                                <h:outputText value="#{item.quantity}" />
+                                            </div>
+                                        </p:column>
 
+                                        <p:column headerText="Remarks">
+                                            <h:outputText value="#{item.remarks}" />
+                                        </p:column>
+
+                                        <p:column headerText="Action">
+                                            <div class="txtAlignCenter">
+                                                <p:commandButton update="@form" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
+                                                    <f:attribute name="orderItemToServe" value="#{item}" />
+                                                    <!--<f:setPropertyActionListener value="{item}" target="{kitchenManagementManagedBean.orderItemToServe}" />-->
+                                                </p:commandButton>
+                                            </div>
+                                        </p:column>
+                                    </p:dataTable>
+
+                                </p:panel>
+                            </p:dataGrid>
+                        </h:form>
+                    </p:tab>
+                </p:tabView>
+            </p:layoutUnit>
+        </p:layout>
     </ui:define>
 
 </ui:composition>
