--- a/eQueue/eQueue-war/web/diningTableManagement.xhtml
+++ b/eQueue/eQueue-war/web/diningTableManagement.xhtml
@@ -92,7 +92,7 @@
 
                             <p:panelGrid>
 
-                                <p:row>
+<!--                                <p:row>
                                     <p:column>
                                         <p:outputLabel for="qrCode" value="QR Code: " style="font-weight: bold;" />
                                     </p:column>
@@ -102,7 +102,7 @@
                                     <p:column>
                                         <p:message for="qrCode" />
                                     </p:column>
-                                </p:row>
+                                </p:row>-->
 
                                 <p:row>
                                     <p:column>
