--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:ez="http://xmlns.jcp.org/jsf/composite/ezcomp"
                 xmlns:p="http://primefaces.org/ui"
                 template="./template/defaultTemplate.xhtml">
 
@@ -24,35 +25,47 @@
                 font-size: 14px;
             }
             .ordered {
-                background-color: indianred;
+                background-color: tomato;
             }
             .preparing {
-                background-color: lightgoldenrodyellow;
+                background-color: lightskyblue;
             }
             .served {
-                background-color: aquamarine;
+                background-color: palegreen;
             }
             .cancelled {
-                background-color: gainsboro;
+                background-color: lightgray;
             }
         </style>
 
-
+        <ez:viewMenuItem id="ccViewMenuItem" />
         <p:layout>
             <p:layoutUnit minSize="300" position="west"  header="Kitchen Overview" collapsible="true">
-                <div style="margin:5;display: flex;">
-                    <p:orderList rendered="#{not empty kitchenManagementManagedBean.ongoingCustomerOrders}" value="#{kitchenManagementManagedBean.ongoingCustomerOrders}" 
-                                 var="ongoingCustomerOrder" controlsLocation="none" 
-                                 itemLabel="#{ongoingCustomerOrder.orderId}"/>
-                </div>
+                <h:form id="formOrdersOverview">
+                    <p:dataTable style="width:300px; margin:10 5 0 5" var="entry" value="#{kitchenManagementManagedBean.menuItemsOverview}"
+                                 draggableRows="true"
+                                 selectionMode="single" rowKey="#{entry.key.menuItemId}" selection="#{kitchenManagementManagedBean.menuItemToViewEntry}"
+                                 >
+                        <f:facet name="header">
+                            Ongoing Orders Summary
+                        </f:facet>
+                        <p:column style="width:100px;" headerText="Menu Item" sortBy="#{entry.key.menuItemName}">
+                            <h:outputText value="#{entry.key.menuItemName}" />
+                        </p:column>
+                        <p:column style="width:25px;text-align: center" headerText="Qty" sortBy="#{entry.value}">
+                            <h:outputText value="#{entry.value}" />
+                        </p:column>
+                        <p:ajax event="rowSelect" listener="#{kitchenManagementManagedBean.viewMenuItem}" update="ccViewMenuItem:formViewMenuItem" oncomplete="PF('dialogViewMenuItem').show()"/>
+                    </p:dataTable>
+                </h:form>
             </p:layoutUnit>
             <p:layoutUnit position="center" >
                 <h:form id="formCurrentDayOrders">
                     <p:growl redisplay="false" life="2500" />
                     <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.currentDayCustomerOrders}" var="order" columns="3" rows="9" paginator="true" 
                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                rowsPerPageTemplate="9,12,15">
-                        <p:panel style="text-align: center; margin: 2px 2px 2px 2px;">
+                                rowsPerPageTemplate="9,12,15" layout="grid">
+                        <p:panel style="height: 200px; text-align: center; margin: 2px 2px 2px 2px;">
 
                             <f:facet name="header">
                                 <h:outputText value="Order [ #{order.orderId} ]" />&nbsp;
@@ -64,7 +77,7 @@
                                 </h:outputText>&nbsp;
                             </f:facet>
 
-                            <p:dataTable rowIndexVar="index" value="#{order.orderLineItems}" var="item" scrollable="true" >
+                            <p:dataTable rowIndexVar="index" value="#{order.orderLineItems}" var="item" scrollable="true" scrollHeight="150">
                                 <p:column headerText="Idx" style="width: 15px; text-align: center;">
                                     <h:outputText value="#{index + 1}" />
                                 </p:column>
@@ -73,25 +86,27 @@
                                     <h:outputText value="#{item.menuItem.menuItemName}" />
                                 </p:column>
 
-                                <p:column headerText="Quantity" style="width: 50px; text-align: center;">
+                                <p:column headerText="Qty" style="width: 20px; text-align: center;">
                                     <h:outputText value="#{item.quantity}" />
                                 </p:column>
 
-                                <p:column headerText="Status" style="text-align: center;" styleClass="#{item.status == 'ORDERED' ? 'ordered' : item.status == 'PREPARING' ? 'preparing' : item.status == 'SERVED' ? 'served' : 'cancelled'}">
+                                <p:column headerText="Status" style="width: 80px; text-align: center;" styleClass="#{item.status == 'ORDERED' ? 'ordered' : item.status == 'PREPARING' ? 'preparing' : item.status == 'SERVED' ? 'served' : 'cancelled'}">
                                     <h:outputText value="#{item.status}" />
                                 </p:column>
 
-                                <p:column headerText="Action" style="text-align: center;">
+                                <p:column headerText="Action" style="width: 70px; text-align: center;">
                                     <p:commandButton rendered="#{item.remarks != null and (item.status == 'ORDERED' or item.status == 'PREPARING')}" update="formViewOrderLineItem" oncomplete="PF('dialogViewOrderLineItem').show()" title="Remarks" icon="custom-icon alert-icon">
                                         <f:setPropertyActionListener value="#{item}" target="#{kitchenManagementManagedBean.orderItemToView}" />
                                     </p:commandButton>
 
                                     <p:commandButton rendered="#{item.status == 'ORDERED'}" update="@form" title="Prepare" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}">
                                         <f:attribute name="orderItemToPrepare" value="#{item}" />
+                                        <f:attribute name="order" value="#{order}"/>
                                     </p:commandButton>
 
                                     <p:commandButton rendered="#{item.status == 'PREPARING'}" update="@form" title="Serve" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
                                         <f:attribute name="orderItemToServe" value="#{item}" />
+                                        <f:attribute name="order" value="#{order}"/>
                                     </p:commandButton>
                                 </p:column>
                             </p:dataTable>
