--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -10,6 +10,7 @@
 
 
     <ui:define name="content">
+        <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
         <h:outputStylesheet library="css" name="default.css" />
         <style type="text/css">
             .ui-datagrid-header {
@@ -42,12 +43,22 @@
         <p:layout>
             <p:layoutUnit minSize="300" position="west"  header="Kitchen Overview" collapsible="true">
                 <h:form id="formOrdersOverview">
+                    <div style="margin: 10 5 0 5">
+                        <h:outputText value="Number of Ongoing Orders: #{kitchenManagementManagedBean.currentDayCustomerOrders.size()}"/>
+                        <br/>
+                        <h:outputText value="Number of Ordered Line Items: #{kitchenManagementManagedBean.numOrdered}"/>
+                        <br/>
+                        <h:outputText value="Number of Preparing Line Items: #{kitchenManagementManagedBean.numPreparing}"/>
+                        <br/>
+                    </div>
                     <p:dataTable style="width:300px; margin:10 5 0 5" var="entry" value="#{kitchenManagementManagedBean.menuItemsOverview}"
                                  draggableRows="true"
                                  selectionMode="single" rowKey="#{entry.key.menuItemId}" selection="#{kitchenManagementManagedBean.menuItemToViewEntry}"
                                  >
                         <f:facet name="header">
                             Ongoing Orders Summary
+                            <br/>
+                            [Ordered and Preparing]
                         </f:facet>
                         <p:column style="width:100px;" headerText="Menu Item" sortBy="#{entry.key.menuItemName}">
                             <h:outputText value="#{entry.key.menuItemName}" />
@@ -65,7 +76,7 @@
                     <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.currentDayCustomerOrders}" var="order" columns="3" rows="9" paginator="true" 
                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                 rowsPerPageTemplate="9,12,15" layout="grid">
-                        <p:panel style="height: 200px; text-align: center; margin: 2px 2px 2px 2px;">
+                        <p:panel style="height: 230px; text-align: center; margin: 2px 2px 2px 2px;">
 
                             <f:facet name="header">
                                 <h:outputText value="Order [ #{order.orderId} ]" />&nbsp;
@@ -77,7 +88,9 @@
                                 </h:outputText>&nbsp;
                             </f:facet>
 
-                            <p:dataTable rowIndexVar="index" value="#{order.orderLineItems}" var="item" scrollable="true" scrollHeight="150">
+                            <p:dataTable id="orderLineItemsTable" rowIndexVar="index" value="#{order.orderLineItems}" var="item" scrollable="true" scrollHeight="100"
+                                         rowKey="#{item.orderLineItemId}" selection="#{kitchenManagementManagedBean.selectedOrderItem}" selectionMode="single">
+                                <p:ajax event="contextMenu" update="formViewOrderLineItem" />
                                 <p:column headerText="Idx" style="width: 15px; text-align: center;">
                                     <h:outputText value="#{index + 1}" />
                                 </p:column>
@@ -95,24 +108,29 @@
                                 </p:column>
 
                                 <p:column headerText="Action" style="width: 70px; text-align: center;">
-                                    <p:commandButton rendered="#{item.remarks != null and (item.status == 'ORDERED' or item.status == 'PREPARING')}" update="formViewOrderLineItem" oncomplete="PF('dialogViewOrderLineItem').show()" title="Remarks" icon="custom-icon alert-icon">
-                                        <f:setPropertyActionListener value="#{item}" target="#{kitchenManagementManagedBean.orderItemToView}" />
+                                    <p:commandButton rendered="#{item.remarks != null and (item.status == 'ORDERED' or item.status == 'PREPARING')}" update="remarksText" oncomplete="PF('dialogViewOrderItemRemarks').show()" title="Remarks" icon="custom-icon alert-icon">
+                                        <f:setPropertyActionListener value="#{item}" target="#{kitchenManagementManagedBean.selectedOrderItem}" />
                                     </p:commandButton>
 
-                                    <p:commandButton rendered="#{item.status == 'ORDERED'}" update="@form" title="Prepare" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}">
+                                    <p:commandButton rendered="#{item.status == 'ORDERED'}" update="@form formOrdersOverview" title="Prepare" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}">
                                         <f:attribute name="orderItemToPrepare" value="#{item}" />
                                         <f:attribute name="order" value="#{order}"/>
                                     </p:commandButton>
 
-                                    <p:commandButton rendered="#{item.status == 'PREPARING'}" update="@form" title="Serve" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
+                                    <p:commandButton rendered="#{item.status == 'PREPARING'}" update="@form formOrdersOverview" title="Serve" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
                                         <f:attribute name="orderItemToServe" value="#{item}" />
                                         <f:attribute name="order" value="#{order}"/>
                                     </p:commandButton>
                                 </p:column>
                             </p:dataTable>
 
+                            <p:contextMenu for="orderLineItemsTable">
+                                <p:menuitem value="View" update="formViewOrderLineItem" icon="pi pi-search" oncomplete="PF('dialogViewOrderLineItem').show()"/>
+                                <p:menuitem value="Edit" update="formViewOrderLineItem" icon="pi pi-pencil"/>
+                            </p:contextMenu>
+
                             <br />
-                            <p:commandButton rendered="#{order.isAllServed == true}" update="@form" value="Complete" actionListener="#{kitchenManagementManagedBean.completeOrder}">
+                            <p:commandButton rendered="#{order.isAllServed == true}" update="@form formOrdersOverview" value="Complete" actionListener="#{kitchenManagementManagedBean.completeOrder}">
                                 <f:attribute name="orderToComplete" value="#{order}" />
                             </p:commandButton>
 
@@ -120,13 +138,17 @@
                     </p:dataGrid>
                 </h:form>
 
+                <p:dialog header="Remarks" widgetVar="dialogViewOrderItemRemarks">
+                    <h:outputText id="remarksText" value="#{kitchenManagementManagedBean.selectedOrderItem.remarks}" />
+                </p:dialog>
+
                 <h:form id="formViewOrderLineItem">
                     <p:dialog id="dialogViewOrderLineItem" widgetVar="dialogViewOrderLineItem" responsive="true" header="View Order Item Details" closable="true" showEffect="clip" hideEffect="clip">
-                        <p:panelGrid>
-                            <p:row rendered="#{kitchenManagementManagedBean.orderItemToView.menuItem.imagePath != null}">
+                        <p:panelGrid id="orderLineItemDetails">
+                            <p:row rendered="#{kitchenManagementManagedBean.selectedOrderItem.menuItem.imagePath != null}">
                                 <p:column colspan="2">
                                     <div style='text-align: center;'>
-                                        <p:graphicImage style="margin: 15px;" width="180" height="180" library="images" name="food/#{kitchenManagementManagedBean.orderItemToView.menuItem.imagePath}" alt="#{kitchenManagementManagedBean.orderItemToView.menuItem.menuItemName} (#{kitchenManagementManagedBean.orderItemToView.menuItem.menuItemCode}) is not loaded" />
+                                        <p:graphicImage style="margin: 15px;" width="180" height="180" library="images" name="food/#{kitchenManagementManagedBean.selectedOrderItem.menuItem.imagePath}" alt="#{kitchenManagementManagedBean.selectedOrderItem.menuItem.menuItemName} (#{kitchenManagementManagedBean.selectedOrderItem.menuItem.menuItemCode}) is not loaded" />
                                     </div>
                                 </p:column>
                             </p:row>
@@ -136,7 +158,7 @@
                                     <h:outputLabel style="text-align: right; font-weight: bold;" value="Item Code" />
                                 </p:column>
                                 <p:column>
-                                    <h:outputText value="#{kitchenManagementManagedBean.orderItemToView.menuItem.menuItemCode}" />
+                                    <h:outputText value="#{kitchenManagementManagedBean.selectedOrderItem.menuItem.menuItemCode}" />
                                 </p:column>
                             </p:row>
 
@@ -145,7 +167,7 @@
                                     <h:outputLabel style="text-align: right; font-weight: bold;" value="Item Name" />
                                 </p:column>
                                 <p:column>
-                                    <h:outputText value="#{kitchenManagementManagedBean.orderItemToView.menuItem.menuItemName}" />
+                                    <h:outputText value="#{kitchenManagementManagedBean.selectedOrderItem.menuItem.menuItemName}" />
                                 </p:column>
                             </p:row>
 
@@ -154,7 +176,7 @@
                                     <h:outputLabel style="text-align: right; font-weight: bold;" value="Item Description" />
                                 </p:column>
                                 <p:column>
-                                    <h:outputText value="#{kitchenManagementManagedBean.orderItemToView.menuItem.menuItemDescription}" />
+                                    <h:outputText value="#{kitchenManagementManagedBean.selectedOrderItem.menuItem.menuItemDescription}" />
                                 </p:column>
                             </p:row>
 
@@ -163,7 +185,7 @@
                                     <h:outputLabel style="text-align: right; font-weight: bold;" value="Quantity" />
                                 </p:column>
                                 <p:column>
-                                    <h:outputText value="#{kitchenManagementManagedBean.orderItemToView.quantity}" />
+                                    <h:outputText value="#{kitchenManagementManagedBean.selectedOrderItem.quantity}" />
                                 </p:column>
                             </p:row>
 
@@ -172,7 +194,7 @@
                                     <h:outputLabel style="text-align: right; font-weight: bold;" value="Remarks" />
                                 </p:column>
                                 <p:column>
-                                    <h:outputText value="#{kitchenManagementManagedBean.orderItemToView.remarks}" />
+                                    <h:outputText value="#{kitchenManagementManagedBean.selectedOrderItem.remarks}" />
                                 </p:column>
                             </p:row>
 
