updated store details page, removed old separate update page

--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -12,7 +12,7 @@
         <div class="outer-container">
             <p:panel header="Menu">
                 <h:panelGrid class="panel-grid-container" columns="5" cellpadding="10">
-                    <p:link>
+                    <p:link outcome="storeDetails.xhtml">
                         <p:panel class="link-panel-container">
                             <h:panelGrid>
                                 <span class="store-icon custom-icon-homepage"/>
