--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -41,8 +41,11 @@
 
         <ez:viewMenuItem id="ccViewMenuItem" />
         <p:layout>
+            <p:poll interval="5" listener="#{kitchenManagementManagedBean.retrieveIncompleteOrders}" update="formOrdersOverview formCurrentDayOrders"></p:poll>
+
             <p:layoutUnit minSize="300" position="west"  header="Kitchen Overview" collapsible="true">
                 <h:form id="formOrdersOverview">
+
                     <p:panelGrid style="width:300px; margin:10 5 0 5">
                         <f:facet name="header">
                             <p:row>
@@ -56,7 +59,7 @@
                                 <h:outputText value="Number of Ongoing Orders:" />
                             </p:column>
                             <p:column colspan="1" style="text-align: center; font-weight: bold">
-                                <h:outputText value="#{kitchenManagementManagedBean.currentDayCustomerOrders.size()}"/>
+                                <h:outputText value="#{kitchenManagementManagedBean.incompleteCustomerOrders.size()}"/>
                             </p:column>
                         </p:row>
                         <p:row>
@@ -99,7 +102,7 @@
             <p:layoutUnit position="center" >
                 <h:form id="formCurrentDayOrders">
                     <p:growl redisplay="false" life="2500" />
-                    <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.currentDayCustomerOrders}" var="order" columns="3" rows="9" paginator="true" 
+                    <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.incompleteCustomerOrders}" var="order" columns="3" rows="9" paginator="true" 
                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                 rowsPerPageTemplate="9,12,15" layout="grid">
                         <p:panel style="height: 230px; text-align: center; margin: 2px 2px 2px 2px;">
