Done Queue Management Page with notification Function

--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -21,13 +21,13 @@
                     </h:panelGrid>
                 </p:panel>
             </p:link>
-            <p:link>
+            <p:link outcome="queueManagement.xhtml">
                 <p:panel class="link-panel-container">
                     <h:panelGrid class="vertically-centered">
                         <span class="queue-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Queue</p>
-                            <p style="margin: 0">Mgmt</p>
+                            <p style="margin: 0">Management</p>
                         </div>
                     </h:panelGrid>
                 </p:panel>
@@ -38,7 +38,7 @@
                         <span class="menu-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Menu</p>
-                            <p style="margin: 0">Mgmt</p>
+                            <p style="margin: 0">Management</p>
                         </div>
                     </h:panelGrid>
                 </p:panel>
@@ -49,7 +49,7 @@
                         <span class="table-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Table</p>
-                            <p style="margin: 0">Mgmt</p>
+                            <p style="margin: 0">Management</p>
                         </div>
                     </h:panelGrid>
                 </p:panel>
@@ -60,7 +60,7 @@
                         <span class="kitchen-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Kitchen</p>
-                            <p style="margin: 0">Mgmt</p>
+                            <p style="margin: 0">Management</p>
                         </div>
                     </h:panelGrid>
                 </p:panel>
@@ -71,7 +71,7 @@
                         <span class="employees-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Employee</p>
-                            <p style="margin: 0">Mgmt</p>
+                            <p style="margin: 0">Management</p>
                         </div>
                     </h:panelGrid>
                 </p:panel>
