done with the table display

--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -77,13 +77,13 @@
                     </h:panelGrid>
                 </p:panel>
             </p:link>
-            <p:link>
+            <p:link outcome="transactionManagement.xhtml">
                 <p:panel class="link-panel-container">
                     <h:panelGrid class="vertically-centered">
                         <span class="transaction-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Transaction</p>
-                            <p style="margin: 0">History</p>
+                            <p style="margin: 0">Management</p>
                         </div>
                     </h:panelGrid>
                 </p:panel>
